<resources>
    <string name="app_name">幸运咖啡</string>

    <!--login-->
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>

    <!--tab-->
    <string name="product">商品</string>
    <string name="order">订单</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>

    <!--order-->
    <string name="buy">购买</string>
    <string name="order_again">再来一单</string>

    <!--mine-->
    <string name="save">保存</string>
    <string name="login_out">退出登录</string>
</resources>
