<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right">

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@color/white"
            android:layout_marginRight="10dp"
            android:paddingRight="0dp"
            android:layout_marginTop="20dp"
            android:textSize="21sp"
            android:textColor="@color/theme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/about_us_logo_icon"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/username"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="15sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_radius"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>
