<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/product_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/product_iv"
            android:duplicateParentState="true"
            android:background="@drawable/tab_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/product_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/tab_text"
            android:text="@string/product"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/order_iv"
            android:duplicateParentState="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_order"/>
        <TextView
            android:id="@+id/order_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@drawable/tab_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shopping_cart_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/shopping_cart_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_shopping_cart"/>
        <TextView
            android:id="@+id/shopping_cart_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart"
            android:textColor="@drawable/tab_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/mine_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_mine"/>
        <TextView
            android:id="@+id/mine_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"
            android:textColor="@drawable/tab_text"/>
    </LinearLayout>
</LinearLayout>